Fix: Activity Stream - site border overflow #221

--- a/userContent.css
+++ b/userContent.css
@@ -17,6 +17,10 @@
     }
 
     /** Activity Stream - Web Site Icon: full size ****************************/
+    .top-site-outer .tile {
+      overflow: hidden;
+    }
+
     .top-site-outer .tile .icon-wrapper {
       width: 100% !important; /* Original: 48px */
       height: 100% !important; /* Original: 48px */
